--- a/roles/example-role/templates/service.conf.j2
+++ b/roles/example-role/templates/service.conf.j2
@@ -1,10 +1,12 @@
 #Here we have a super long config file
 
 ####Hash Example####
-#This makes for a very simple config.
-#Since it is an associative array we can
-#add arbitary values as needed as well as overwrite specfic defaults using
+# This makes for a very simple config.
+# Since it is an associative array we can
+# add arbitary values as needed as well as overwrite specfic defaults using
 # hash_behaviour = merge
+# No matter how much we extend functionality or the configs change our template
+# is consistant
 
 {% for key, val in service_name.conf.iteritems() %}
 {{ key }} = {{ val }}
@@ -12,11 +14,17 @@
 
 
 ####Name Spaced Example####
+# Here we can see the complexity of the template increase with the number of
+# values present
 max_memory = {{ service_name_conf_max_memory }}
 user = {{ service_name_conf_user }}
 group = {{ service_name_conf_group }}
 some_flag = {{ service_name_conf_some_flag }}
 os_specific_directory = {{ service_name_conf_os_specific_directory }}
+
+# At this point we need to add multiple ways of inputting arbitrary data to
+# keep they apart since we cannot merge the hashes. This makes overwritting
+# arbitrary values found during os detection pretty tricky.
 {% for key, val in service_name_conf_arbitrary_os_additions.iteritems() %}
 {{ key }} = {{ val }}
 {% endfor %}
